# studio-weekend

.claude/agents/: market-researcher.md
docs/: README.md  seed-words.md
docs/_experimental/compute-crossing-v1/: concept.md
docs/_experimental/prompt-slots-v1/: vision.md
docs/_experimental/studio-tycoon-v1/: pillars.md  vision.md
docs/research/: design-criteria.md  genre-analysis.md  niche-gaps.md  similar-games.md
prototypes/: generator-v0.html
prototypes/weekend-survivor/: CONCEPT.md  Cargo.toml  README.md
prototypes/weekend-survivor/src/: camera.rs  combat.rs  enemy.rs  gem.rs  hp.rs  hud.rs  main.rs  player.rs  sfx.rs  upgrade.rs  weapon.rs
prototypes/weekend-two-to-twelve/: CONCEPT.md  README.md  index.html
